// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slider-basic-component applies variant class to moving track and thumb container: variant-danger 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_8uvr2iz89-label" aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="danger slider-moving-track" style="width: 20%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="danger slider-thumb-container" role="slider" tabindex="0" style="left: 20%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="danger slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_8uvr2iz89-label" aria-readonly="true" class="slider-value-right" role="textbox">
            20
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component disabled: slider is not focusable and sets aria-disabled: disabled 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_cbzz4ajvu-label" aria-readonly="true" class="slider-value-left" role="textbox">
            5
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 5%;"></div>
            <div aria-disabled="true" aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="slider-thumb-container slider-thumb-container-disabled" role="slider" tabindex="-1" style="left: 5%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_cbzz4ajvu-label" aria-readonly="true" class="slider-value-right" role="textbox">
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component hideTextBoxes hides both; individual flags hide respective side: hidden-both 1`] = `
<slider-basic-component hide-text-boxes="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" aria-valuetext="33" class="slider-thumb-container" role="slider" tabindex="0" style="left: 33%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component hideTextBoxes hides both; individual flags hide respective side: hidden-left 1`] = `
<slider-basic-component hide-left-text-box="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" aria-valuetext="33" class="slider-thumb-container" role="slider" tabindex="0" style="left: 33%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_oxjtadcrw-label" aria-readonly="true" class="slider-value-right" role="textbox">
            33
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component hideTextBoxes hides both; individual flags hide respective side: hidden-right 1`] = `
<slider-basic-component hide-right-text-box="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_duga4ots8-label" aria-readonly="true" class="slider-value-left" role="textbox">
            33
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="33" aria-valuetext="33" class="slider-thumb-container" role="slider" tabindex="0" style="left: 33%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component horizontal drag changes value (no snap), and snapToTicks snaps to nearest: drag-with-snap 1`] = `
<slider-basic-component snap-to-ticks="" tick-values="[0,25,50,75,100]">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_n14bbb50o-label" aria-readonly="true" class="slider-value-left" role="textbox">
            50
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 50%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50" class="slider-thumb-container" role="slider" tabindex="0" style="left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-labelledby="slider_n14bbb50o-label" aria-readonly="true" class="slider-value-right" role="textbox">
            50
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component keyboard ArrowRight/ArrowLeft without snapToTicks increments by 1 step: keyboard-no-snap 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_q4dsd6rz2-label" aria-readonly="true" class="slider-value-left" role="textbox">
            5
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 50%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="10" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            10
          </div>
          <div aria-labelledby="slider_q4dsd6rz2-label" aria-readonly="true" class="slider-value-right" role="textbox">
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component keyboard snapping to tickValues goes to next/prev tick: keyboard-with-snap 1`] = `
<slider-basic-component snap-to-ticks="" tick-values="[0,20,40,60]">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_cqkpk3erv-label" aria-readonly="true" class="slider-value-left" role="textbox">
            20
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 33.33333333333333%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="60" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="left: 33.33333333333333%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-labelledby="slider_cqkpk3erv-label" aria-readonly="true" class="slider-value-right" role="textbox">
            20
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component parses tickValues from JSON attribute and shows tick labels: ticks-with-labels 1`] = `
<slider-basic-component tick-labels="" tick-values="[0,25,50,75,100]">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_7iw1nfvvk-label" aria-readonly="true" class="slider-value-left" role="textbox">
            50%
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 50%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50%" class="slider-thumb-container" role="slider" tabindex="0" style="left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
            <div aria-hidden="true" class="slider-ticks">
              <div>
                <div class="slider-tick" style="left: 0%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 0%; transform: translateX(-50%);">
                  0%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 25%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 25%; transform: translateX(-50%);">
                  25%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 50%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 50%; transform: translateX(-50%);">
                  50%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 75%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 75%; transform: translateX(-50%);">
                  75%
                </div>
              </div>
              <div>
                <div class="slider-tick" style="left: 100%; top: calc(50% - 10px);"></div>
                <div class="slider-tick-label" style="left: 100%; transform: translateX(-50%);">
                  100%
                </div>
              </div>
            </div>
          </div>
          <div aria-labelledby="slider_7iw1nfvvk-label" aria-readonly="true" class="slider-value-right" role="textbox">
            50%
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component renders label and sliderThumbLabel modes: label-no-thumb 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <label class="form-control-label" id="slider_uqus2k2gc-label">
          Volume
          <span id="slider_uqus2k2gc-value">
            7%
          </span>
        </label>
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_uqus2k2gc-label" aria-readonly="true" class="slider-value-left" role="textbox">
            7%
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0%
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 7.000000000000001%;"></div>
            <div aria-labelledby="slider_uqus2k2gc-label" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="7" aria-valuetext="7%" class="slider-thumb-container" role="slider" tabindex="0" style="left: 7.000000000000001%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100%
          </div>
          <div aria-labelledby="slider_uqus2k2gc-label" aria-readonly="true" class="slider-value-right" role="textbox">
            7%
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component renders label and sliderThumbLabel modes: thumb-label 1`] = `
<slider-basic-component slider-thumb-label="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_5gd8c0svs-label" aria-readonly="true" class="slider-value-left" role="textbox">
            7%
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0%
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 7.000000000000001%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="7" aria-valuetext="7%" class="slider-thumb-container" role="slider" tabindex="0" style="left: 7.000000000000001%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
              <div aria-hidden="true" class="slider-thumb-label" style="position: absolute; left: 7.000000000000001%; transform: translateX(-50%) translateY(30%) translateY(-100%) rotate(45deg);">
                <div>
                  <span>
                    7%
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100%
          </div>
          <div aria-labelledby="slider_5gd8c0svs-label" aria-readonly="true" class="slider-value-right" role="textbox">
            7%
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component renders with defaults (snapshot) + a11y slider element: default-render 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-horizontal" dir="ltr" role="presentation">
        <div class="slider-container slider-container-horizontal">
          <div aria-labelledby="slider_dqze36u2x-label" aria-readonly="true" class="slider-value-left" role="textbox">
            0
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-horizontal" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="width: 0%;"></div>
            <div aria-label="Slider" aria-orientation="horizontal" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0" class="slider-thumb-container" role="slider" tabindex="0" style="left: 0%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_dqze36u2x-label" aria-readonly="true" class="slider-value-right" role="textbox">
            0
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component sliderThumbLabel renders in vertical orientation: thumb-label-vertical 1`] = `
<slider-basic-component slider-thumb-label="">
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-labelledby="slider_vqahiy7yw-label" aria-readonly="true" class="slider-value-left" role="textbox">
            70
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="bottom: 0; height: 70%;"></div>
            <div aria-label="Volume" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="70" aria-valuetext="70" class="slider-thumb-container" role="slider" tabindex="0" style="bottom: 70%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
              <div aria-hidden="true" class="slider-thumb-label" style="position: absolute; bottom: calc(70% - 18px); left: calc(100% + 18px); transform: translateY(50%) translateY(-50%) rotate(140deg);">
                <div>
                  <span>
                    70
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_vqahiy7yw-label" aria-readonly="true" class="slider-value-right" role="textbox">
            70
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component vertical drag changes value and moving track grows from bottom: drag-vertical 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-labelledby="slider_zgzpkg7fk-label" aria-readonly="true" class="slider-value-left" role="textbox">
            100
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="bottom: 0; height: 100%;"></div>
            <div aria-label="Slider" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-valuetext="100" class="slider-thumb-container" role="slider" tabindex="0" style="bottom: 100%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_zgzpkg7fk-label" aria-readonly="true" class="slider-value-right" role="textbox">
            100
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component vertical keyboard navigation ignores left/right and uses up/down: keyboard-vertical 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-labelledby="slider_ylid5n2nu-label" aria-readonly="true" class="slider-value-left" role="textbox">
            5
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="bottom: 0; height: 50%;"></div>
            <div aria-label="Slider" aria-orientation="vertical" aria-valuemax="10" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="slider-thumb-container slider-thumb-container-active" role="slider" tabindex="0" style="bottom: 50%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            10
          </div>
          <div aria-labelledby="slider_ylid5n2nu-label" aria-readonly="true" class="slider-value-right" role="textbox">
            5
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;

exports[`slider-basic-component vertical orientation sets vertical classes, aria-orientation, and bottom-anchored moving track: vertical-orientation 1`] = `
<slider-basic-component>
  <div class="sc-slider">
    <div class="slider-wrapper">
      <div class="slider slider-vertical" dir="ltr" role="presentation">
        <div class="slider-container slider-container-vertical">
          <div aria-labelledby="slider_a5po0tq7q-label" aria-readonly="true" class="slider-value-left" role="textbox">
            50
          </div>
          <div aria-hidden="true" class="slider-min-value">
            0
          </div>
          <div class="slider-controls slider-controls-vertical" role="presentation">
            <div aria-hidden="true" class="slider-background-track"></div>
            <div aria-hidden="true" class="slider-moving-track" style="bottom: 0; height: 50%;"></div>
            <div aria-label="Slider" aria-orientation="vertical" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50" class="slider-thumb-container" role="slider" tabindex="0" style="bottom: 50%; left: 50%; transition: all 0.1s cubic-bezier(0.25, 0.8, 0.5, 1) 0s;">
              <div aria-hidden="true" class="slider-thumb" role="presentation"></div>
            </div>
          </div>
          <div aria-hidden="true" class="slider-max-value">
            100
          </div>
          <div aria-labelledby="slider_a5po0tq7q-label" aria-readonly="true" class="slider-value-right" role="textbox">
            50
          </div>
        </div>
      </div>
    </div>
  </div>
</slider-basic-component>
`;
